# serializer version: 1
# name: test_snapshot[jotul_pf911s]
  PalazzettiClient(
    T1=18.5,
    T2=19.2,
    T3=14.0,
    T4=0.0,
    T5=0.0,
    air_outlet_temperature=0.0,
    connected=True,
    current_temperature=18.5,
    fan_speed=1,
    fan_speed_max=5,
    fan_speed_min=0,
    has_air_outlet_temperature=False,
    has_fan_auto=True,
    has_fan_high=False,
    has_fan_silent=False,
    has_on_off_switch=True,
    has_pellet_level=False,
    has_wood_combustion_temperature=False,
    host='127.0.0.1',
    hw_version='2.5.3 2022-09-01 16:24:09 (5cd2579)',
    is_heating=False,
    is_on=False,
    mac='40:F3:85:79:99:99',
    name='Salon',
    outlet_temperature=0.0,
    pellet_level=0.0,
    pellet_level_max=0.0,
    pellet_level_min=0.0,
    pellet_level_threshold=0.0,
    pellet_quantity=65535,
    power_mode=5,
    room_temperature=18.5,
    status=0,
    sw_version='2.2.1 2022-09-01 16:23:43',
    target_temperature=23,
    target_temperature_max=51,
    target_temperature_min=5,
    wood_combustion_temperature=14.0,
  )
# ---
# name: test_snapshot[jotul_pf911s].1
  _PalazzettiState(
    T1=18.5,
    T2=19.2,
    T3=14.0,
    T4=0.0,
    T5=0.0,
    air_outlet_temperature=0.0,
    current_temperature=18.5,
    door_status=0,
    has_air_outlet_temperature=False,
    has_capacitive_pellet_sensor=False,
    has_chrono=True,
    has_door_control=False,
    has_ecostart=True,
    has_error=False,
    has_fan_mode_auto=True,
    has_fan_mode_high=False,
    has_fan_mode_prop=False,
    has_fan_mode_silent=False,
    has_left_fan=False,
    has_leveltronic_pellet_sensor=False,
    has_light_control=False,
    has_main_fan=True,
    has_on_off_switch=True,
    has_power_regulation=True,
    has_right_fan=False,
    has_switch_on_multifire_pellet=False,
    has_target_temperature=True,
    has_time_synchronization=False,
    has_wood_combustion_temperature=False,
    hw_version='2.5.3 2022-09-01 16:24:09 (5cd2579)',
    hydro_t1_temperature=18.5,
    hydro_t2_temperature=19.2,
    is_air=True,
    is_first_fan_on=False,
    is_heating=False,
    is_hydro=False,
    is_on=False,
    is_product_on=False,
    left_fan_max=1,
    left_fan_min=0,
    left_fan_speed=0,
    light_status=0,
    mac='40:F3:85:79:99:99',
    main_fan_max=5,
    main_fan_min=0,
    main_fan_speed=1,
    name='Salon',
    pellet_level=0.0,
    pellet_level_max=0.0,
    pellet_level_min=0.0,
    pellet_level_threshold=0.0,
    pellet_quantity=65535,
    power_mode=5,
    product_type=1,
    right_fan_max=1,
    right_fan_min=0,
    right_fan_speed=0,
    status=0,
    sw_version='2.2.1 2022-09-01 16:23:43',
    target_temperature=23,
    target_temperature_max=51,
    target_temperature_min=5,
    wood_combustion_temperature=14.0,
  )
# ---
# name: test_snapshot[palazzetti_beatrice]
  PalazzettiClient(
    T1=20.3,
    T2=31.3,
    T3=410.0,
    T4=0.0,
    T5=0.0,
    air_outlet_temperature=0.0,
    connected=True,
    current_temperature=20.3,
    fan_speed=3,
    fan_speed_max=5,
    fan_speed_min=2,
    has_air_outlet_temperature=False,
    has_fan_auto=False,
    has_fan_high=False,
    has_fan_silent=False,
    has_on_off_switch=True,
    has_pellet_level=True,
    has_wood_combustion_temperature=False,
    host='127.0.0.1',
    hw_version='2.5.3 2021-10-08 10:30:20 (657c8cf)',
    is_heating=True,
    is_on=True,
    mac='XXXXXXXX',
    name='Poele Sejour',
    outlet_temperature=0.0,
    pellet_level=0.0,
    pellet_level_max=0.0,
    pellet_level_min=0.0,
    pellet_level_threshold=0.0,
    pellet_quantity=884,
    power_mode=5,
    room_temperature=20.3,
    status=6,
    sw_version='2.2.1 2021-10-08 09:30:45',
    target_temperature=24,
    target_temperature_max=51,
    target_temperature_min=12,
    wood_combustion_temperature=410.0,
  )
# ---
# name: test_snapshot[palazzetti_beatrice].1
  _PalazzettiState(
    T1=20.3,
    T2=31.3,
    T3=410.0,
    T4=0.0,
    T5=0.0,
    air_outlet_temperature=0.0,
    current_temperature=20.3,
    door_status=0,
    has_air_outlet_temperature=False,
    has_capacitive_pellet_sensor=True,
    has_chrono=True,
    has_door_control=False,
    has_ecostart=True,
    has_error=False,
    has_fan_mode_auto=False,
    has_fan_mode_high=False,
    has_fan_mode_prop=False,
    has_fan_mode_silent=False,
    has_left_fan=False,
    has_leveltronic_pellet_sensor=False,
    has_light_control=False,
    has_main_fan=True,
    has_on_off_switch=True,
    has_power_regulation=True,
    has_right_fan=False,
    has_switch_on_multifire_pellet=False,
    has_target_temperature=True,
    has_time_synchronization=False,
    has_wood_combustion_temperature=False,
    hw_version='2.5.3 2021-10-08 10:30:20 (657c8cf)',
    hydro_t1_temperature=20.3,
    hydro_t2_temperature=31.3,
    is_air=True,
    is_first_fan_on=False,
    is_heating=True,
    is_hydro=False,
    is_on=True,
    is_product_on=True,
    left_fan_max=1,
    left_fan_min=0,
    left_fan_speed=0,
    light_status=0,
    mac='XXXXXXXX',
    main_fan_max=5,
    main_fan_min=2,
    main_fan_speed=3,
    name='Poele Sejour',
    pellet_level=0.0,
    pellet_level_max=0.0,
    pellet_level_min=0.0,
    pellet_level_threshold=0.0,
    pellet_quantity=884,
    power_mode=5,
    product_type=1,
    right_fan_max=1,
    right_fan_min=0,
    right_fan_speed=0,
    status=6,
    sw_version='2.2.1 2021-10-08 09:30:45',
    target_temperature=24,
    target_temperature_max=51,
    target_temperature_min=12,
    wood_combustion_temperature=410.0,
  )
# ---
# name: test_snapshot[palazzetti_emily]
  PalazzettiClient(
    T1=125.0,
    T2=22.5,
    T3=26.0,
    T4=0.0,
    T5=21.8,
    air_outlet_temperature=0.0,
    connected=True,
    current_temperature=21.8,
    fan_speed=7,
    fan_speed_max=5,
    fan_speed_min=0,
    has_air_outlet_temperature=False,
    has_fan_auto=True,
    has_fan_high=True,
    has_fan_silent=False,
    has_on_off_switch=True,
    has_pellet_level=False,
    has_wood_combustion_temperature=False,
    host='127.0.0.1',
    hw_version='2.5.3 2022-11-08 15:52:19 (9e8e347)',
    is_heating=False,
    is_on=True,
    mac='AA:AA:AA:71:F2:72',
    name='Emily',
    outlet_temperature=0.0,
    pellet_level=0.0,
    pellet_level_max=12.0,
    pellet_level_min=240.0,
    pellet_level_threshold=10.0,
    pellet_quantity=53,
    power_mode=2,
    room_temperature=21.8,
    status=51,
    sw_version='2.2.1 2022-10-24 11:13:21',
    target_temperature=20,
    target_temperature_max=51,
    target_temperature_min=6,
    wood_combustion_temperature=26.0,
  )
# ---
# name: test_snapshot[palazzetti_emily].1
  _PalazzettiState(
    T1=125.0,
    T2=22.5,
    T3=26.0,
    T4=0.0,
    T5=21.8,
    air_outlet_temperature=0.0,
    current_temperature=21.8,
    door_status=0,
    has_air_outlet_temperature=False,
    has_capacitive_pellet_sensor=False,
    has_chrono=True,
    has_door_control=False,
    has_ecostart=True,
    has_error=False,
    has_fan_mode_auto=True,
    has_fan_mode_high=True,
    has_fan_mode_prop=False,
    has_fan_mode_silent=False,
    has_left_fan=False,
    has_leveltronic_pellet_sensor=False,
    has_light_control=False,
    has_main_fan=True,
    has_on_off_switch=True,
    has_power_regulation=True,
    has_right_fan=False,
    has_switch_on_multifire_pellet=False,
    has_target_temperature=True,
    has_time_synchronization=False,
    has_wood_combustion_temperature=False,
    hw_version='2.5.3 2022-11-08 15:52:19 (9e8e347)',
    hydro_t1_temperature=125.0,
    hydro_t2_temperature=22.5,
    is_air=True,
    is_first_fan_on=True,
    is_heating=False,
    is_hydro=False,
    is_on=True,
    is_product_on=True,
    left_fan_max=1,
    left_fan_min=0,
    left_fan_speed=0,
    light_status=0,
    mac='AA:AA:AA:71:F2:72',
    main_fan_max=5,
    main_fan_min=0,
    main_fan_speed=7,
    name='Emily',
    pellet_level=0.0,
    pellet_level_max=12.0,
    pellet_level_min=240.0,
    pellet_level_threshold=10.0,
    pellet_quantity=53,
    power_mode=2,
    product_type=1,
    right_fan_max=1,
    right_fan_min=0,
    right_fan_speed=0,
    status=51,
    sw_version='2.2.1 2022-10-24 11:13:21',
    target_temperature=20,
    target_temperature_max=51,
    target_temperature_min=6,
    wood_combustion_temperature=26.0,
  )
# ---
# name: test_snapshot[palazzetti_ginger]
  PalazzettiClient(
    T1=21.5,
    T2=25.1,
    T3=45.0,
    T4=0.0,
    T5=0.0,
    air_outlet_temperature=0.0,
    connected=True,
    current_temperature=21.5,
    fan_speed=6,
    fan_speed_max=5,
    fan_speed_min=0,
    has_air_outlet_temperature=False,
    has_fan_auto=True,
    has_fan_high=True,
    has_fan_silent=False,
    has_on_off_switch=True,
    has_pellet_level=False,
    has_wood_combustion_temperature=False,
    host='127.0.0.1',
    hw_version='2.5.3 2021-10-08 10:30:20 (657c8cf)',
    is_heating=False,
    is_on=True,
    mac='40:F3:85:71:23:45',
    name='Name',
    outlet_temperature=0.0,
    pellet_level=0.0,
    pellet_level_max=0.0,
    pellet_level_min=0.0,
    pellet_level_threshold=0.0,
    pellet_quantity=1807,
    power_mode=3,
    room_temperature=21.5,
    status=51,
    sw_version='2.2.1 2021-10-08 09:30:45',
    target_temperature=21,
    target_temperature_max=51,
    target_temperature_min=6,
    wood_combustion_temperature=45.0,
  )
# ---
# name: test_snapshot[palazzetti_ginger].1
  _PalazzettiState(
    T1=21.5,
    T2=25.1,
    T3=45.0,
    T4=0.0,
    T5=0.0,
    air_outlet_temperature=0.0,
    current_temperature=21.5,
    door_status=0,
    has_air_outlet_temperature=False,
    has_capacitive_pellet_sensor=False,
    has_chrono=True,
    has_door_control=False,
    has_ecostart=True,
    has_error=False,
    has_fan_mode_auto=True,
    has_fan_mode_high=True,
    has_fan_mode_prop=False,
    has_fan_mode_silent=False,
    has_left_fan=False,
    has_leveltronic_pellet_sensor=False,
    has_light_control=False,
    has_main_fan=True,
    has_on_off_switch=True,
    has_power_regulation=True,
    has_right_fan=False,
    has_switch_on_multifire_pellet=False,
    has_target_temperature=True,
    has_time_synchronization=False,
    has_wood_combustion_temperature=False,
    hw_version='2.5.3 2021-10-08 10:30:20 (657c8cf)',
    hydro_t1_temperature=21.5,
    hydro_t2_temperature=25.1,
    is_air=True,
    is_first_fan_on=True,
    is_heating=False,
    is_hydro=False,
    is_on=True,
    is_product_on=True,
    left_fan_max=1,
    left_fan_min=0,
    left_fan_speed=0,
    light_status=0,
    mac='40:F3:85:71:23:45',
    main_fan_max=5,
    main_fan_min=0,
    main_fan_speed=6,
    name='Name',
    pellet_level=0.0,
    pellet_level_max=0.0,
    pellet_level_min=0.0,
    pellet_level_threshold=0.0,
    pellet_quantity=1807,
    power_mode=3,
    product_type=1,
    right_fan_max=1,
    right_fan_min=0,
    right_fan_speed=0,
    status=51,
    sw_version='2.2.1 2021-10-08 09:30:45',
    target_temperature=21,
    target_temperature_max=51,
    target_temperature_min=6,
    wood_combustion_temperature=45.0,
  )
# ---
# name: test_snapshot[palazzetti_juliepro2]
  PalazzettiClient(
    T1=0.0,
    T2=22.4,
    T3=220.0,
    T4=0.0,
    T5=18.4,
    air_outlet_temperature=0.0,
    connected=True,
    current_temperature=18.4,
    fan_speed=7,
    fan_speed_max=5,
    fan_speed_min=0,
    has_air_outlet_temperature=False,
    has_fan_auto=True,
    has_fan_high=True,
    has_fan_silent=True,
    has_on_off_switch=True,
    has_pellet_level=False,
    has_wood_combustion_temperature=False,
    host='127.0.0.1',
    hw_version='2.5.3 2021-12-06 06:54:35 (5a791b6)',
    is_heating=True,
    is_on=True,
    mac='--',
    name='Poele',
    outlet_temperature=0.0,
    pellet_level=0.0,
    pellet_level_max=0.0,
    pellet_level_min=0.0,
    pellet_level_threshold=0.0,
    pellet_quantity=1384,
    power_mode=3,
    room_temperature=18.4,
    status=6,
    sw_version='2.2.1 2021-12-06 06:48:51',
    target_temperature=20,
    target_temperature_max=51,
    target_temperature_min=6,
    wood_combustion_temperature=220.0,
  )
# ---
# name: test_snapshot[palazzetti_juliepro2].1
  _PalazzettiState(
    T1=0.0,
    T2=22.4,
    T3=220.0,
    T4=0.0,
    T5=18.4,
    air_outlet_temperature=0.0,
    current_temperature=18.4,
    door_status=0,
    has_air_outlet_temperature=False,
    has_capacitive_pellet_sensor=False,
    has_chrono=True,
    has_door_control=False,
    has_ecostart=True,
    has_error=False,
    has_fan_mode_auto=True,
    has_fan_mode_high=True,
    has_fan_mode_prop=False,
    has_fan_mode_silent=True,
    has_left_fan=False,
    has_leveltronic_pellet_sensor=False,
    has_light_control=False,
    has_main_fan=True,
    has_on_off_switch=True,
    has_power_regulation=True,
    has_right_fan=True,
    has_switch_on_multifire_pellet=False,
    has_target_temperature=True,
    has_time_synchronization=False,
    has_wood_combustion_temperature=False,
    hw_version='2.5.3 2021-12-06 06:54:35 (5a791b6)',
    hydro_t1_temperature=0.0,
    hydro_t2_temperature=22.4,
    is_air=True,
    is_first_fan_on=True,
    is_heating=True,
    is_hydro=False,
    is_on=True,
    is_product_on=True,
    left_fan_max=5,
    left_fan_min=0,
    left_fan_speed=0,
    light_status=0,
    mac='--',
    main_fan_max=5,
    main_fan_min=0,
    main_fan_speed=7,
    name='Poele',
    pellet_level=0.0,
    pellet_level_max=0.0,
    pellet_level_min=0.0,
    pellet_level_threshold=0.0,
    pellet_quantity=1384,
    power_mode=3,
    product_type=1,
    right_fan_max=5,
    right_fan_min=0,
    right_fan_speed=3,
    status=6,
    sw_version='2.2.1 2021-12-06 06:48:51',
    target_temperature=20,
    target_temperature_max=51,
    target_temperature_min=6,
    wood_combustion_temperature=220.0,
  )
# ---
